--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,9 @@ dependencies:
   currency_textfield: ^4.0.0
   country_flags: ^2.1.1
   pdf_render: ^1.4.0
-  custom_marker: ^1.0.0
   currency_icons: ^0.3.0
+  the_widget_marker: ^1.0.0
+  url_launcher: ^6.1.14
 
 dev_dependencies:
   flutter_test:
