--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   currency_icons: ^0.3.0
   the_widget_marker: ^1.0.0
   url_launcher: ^6.1.14
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
